packages/fuels-macros/tests/ui/abigen/malformed_abi_error.stderr
error: proc macro panicked
 --> tests/ui/abigen/malformed_abi_error.rs:3:1
  |
3 | abigen!(Contract(name = "SomeName", abi = r#"{}"#));
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = help: message: called `Result::unwrap()` on an `Err` value: "malformed `abi`. Did you use `forc` to create it?:  missing field `types` at line 1 column 2"
